--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint 'src/**/*.{astro,js,jsx,ts,tsx}' --cache",
+    "lint": "eslint 'src/**/*.{astro,js,jsx,ts,tsx}' --cache --fix",
     "prettier:check": "prettier --check 'src/**/*.{astro,js,jsx,ts,tsx}'",
     "prettier:fix": "prettier --write 'src/**/*.{astro,js,jsx,ts,tsx}'"
   },
@@ -25,7 +25,9 @@
     "@vanilla-extract/vite-plugin": "^3.8.0",
     "eslint": "^8.36.0",
     "eslint-plugin-astro": "^0.26.1",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.7",
     "prettier-plugin-astro": "^0.8.0",
     "typescript": "^5.0.2"
