--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^4.5.10",
-    "@vanilla-extract/css": "^1.10.0",
+    "@vanilla-extract/css": "^1.11.0",
     "@vanilla-extract/sprinkles": "^1.5.2",
-    "astro": "^2.1.7"
+    "astro": "^2.2.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "@vanilla-extract/vite-plugin": "^3.8.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.38.0",
     "eslint-plugin-astro": "^0.26.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.7",
     "prettier-plugin-astro": "^0.8.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4",
+    "vite": "^4.2.1"
   }
 }
