--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@astrojs/partytown": "^1.2.0",
+    "@astrojs/prefetch": "^0.2.1",
     "@astrojs/sitemap": "^1.2.2",
     "@fontsource/poppins": "^4.5.10",
     "@vanilla-extract/css": "^1.11.0",
