--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@astrojs/sitemap": "^1.2.2",
     "@vanilla-extract/css": "^1.11.0",
     "@vanilla-extract/sprinkles": "^1.6.0",
-    "astro": "^2.3.0"
+    "astro": "^2.5.5",
+    "mdast-util-to-string": "^3.2.0",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.0",
